# scriptbot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bot.rs  config.rs  main.rs
src/db/: mod.rs  sled.rs
