[package]
name = "scriptbot"
version = "0.1.0"
authors = ["Skye <9571697+eLunate@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"

[dependencies.cmd]
git = "https://github.com/eLunate/cmd-rs.git"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "rustls_backend",
    # "cache" # I personally despise the built-in cache
]
version = "0.9.0-rc.1"